# wxdump

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  start-dev.bat  start-dev.sh  start.bat  start.sh
py/: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  test_install.py
py/pywxdump/api/: __init__.py
py/pywxdump/ui/web/: index.html
py/pywxdump/ui/web/assets/: AboutView-C4nyyLM-.js  BiasView-DTqQTLBT.js  ChatView-BzAD0dLq.js  CleanupView-DErrXqnu.js  ContactsView-DkvML2jt.js  DbInitComponent.vue_vue_type_script_setup_true_lang-DXpvib_f.js  DbInitView-msykjJz0.js  DecryptView-BAbZbhXh.js  FavoriteView-elc83YB3.js  HelpView-CxAzPZhc.js  HomeView-D5ZhlfSW.js  IndexView-C73PLHry.js  IndexView.vue_vue_type_script_setup_true_lang-tqbGGXhb.js  MergeView-CsWq-KqJ.js  MomentsView-B7fvt5Xp.js  SettingView-DTNYmeWy.js  StatisticsView-B0qyqznb.js  WxinfoView-B2PDQ74h.js  index-85b7hZzl.js  index-DzbD6BXd.css
web/: .env.development  package.json  vite.config.ts
web/src/: App.vue
web/src/api/: chat.ts
web/src/assets/: base.css  main.css
web/src/components/chat/: ChatRecords.vue
web/src/components/common/: BackButton.vue
web/src/components/utils/: DbInitComponent.vue
web/src/router/: index.ts
web/src/utils/: axios.js
web/src/views/: HomeView.vue  IndexView.vue  StatisticsView.vue
web/src/views/tools/: BatchExportView.vue  BiasView.vue  DecryptView.vue  MergeView.vue  WxinfoView.vue
